# mc-ecpe

./: Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: audio_class 3.ipynb  audio_class.ipynb  audio_classifier_latest.ipynb  audio_features.ipynb  bert.ipynb  bert2.ipynb  best.ipynb  downsample.ipynb  eda.ipynb  emotion_class.ipynb  opensmile.ipynb  out.csv  simple-emotion-class.ipynb
src/data/: make_dataset.py  make_functional_dataset.py
src/features/: audio_preprocessing.py  text_preprocessing.py
src/models/: abstractmodel.py  audioonlymodel.py  build_models.py  config.py  modelfactory.py  textaudiofusionmodel.py  textonlymodel.py  train_model.py  uncertainty.py
src/visualization/: visualize.py
