[tool.poetry]
name = "mc-ecpe"
version = "0.1.0"
description = ""
authors = ["teostereciu <teostereciu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
tensorflow-macos = "2.9.2"
tensorflow-metal = "0.5.0"
jupyter = "^1.0.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
contractions = "^0.1.73"
nltk = "^3.8.1"
ipykernel = "^6.29.3"
notebook = "^7.1.1"
librosa = "^0.10.1"
scikit-image = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
