[tool.poetry]
name = "mc-ecpe"
version = "0.1.0"
description = ""
authors = ["teostereciu <teostereciu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
numpy = "^1.26.4"
pandas = "^2.2.2"
click = "^8.1.7"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
tensorflow = "^2.16.1"
iso-639 = "^0.4.5"
opensmile = "^2.5.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
